src/tests/fixtures/field_definitions/FieldAsStaticClassMethodNotExported.invalid.ts.expected
-----------------
INPUT
----------------- 
/** @gqlType */
class User {
  /** @gqlField */
  name: string;

  /** @gqlField */
  static getUser(_: Query): User {
    return new User();
  }
}

/** @gqlType */
type Query = unknown;

-----------------
OUTPUT
-----------------
-- Error Report --
src/tests/fixtures/field_definitions/FieldAsStaticClassMethodNotExported.invalid.ts:2:1 - error: Expected `@gqlField` static method's class to be exported. Grats needs to import resolvers into its generated schema module, so the resolver class must be an exported.

  2 class User {
    ~~~~~~~~~~~~
  3   /** @gqlField */
    ~~~~~~~~~~~~~~~~~~
... 
  9   }
    ~~~
 10 }
    ~


-- Code Action: "Add export keyword to class with static @gqlField" (add-export-keyword-to-class) --
- Original
+ Fixed

@@ -1,3 +1,3 @@
  /** @gqlType */
- class User {
+ export class User {
    /** @gqlField */